# tapl_exercises

./: Cargo.toml  LICENSE  readme.md
arith/: Cargo.toml
arith/src/: arith.pest  main.rs
pure_untyped/: Cargo.toml
pure_untyped/src/: grammar.pest  main.rs
